--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,9 @@
 name: ItemCloud
 version: "1.3"
 author: onebone
-api: [1.4.0]
+api:
+- 1.13.0
+- 2.0.0
 main: onebone\itemcloud\MainClass
 website: http://onebone.me/plugins/?plugin=itemcloud
 
